force-app/main/default/objects/Skill__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional detail to back up the rating</description>
    <label>Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>