force-app/main/default/objects/Skill__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - None</fullName>
            </value>
            <value>
                <fullName>1 - Beginner</fullName>
            </value>
            <value>
                <fullName>2 - Basic</fullName>
            </value>
            <value>
                <fullName>3 - Intermediate</fullName>
            </value>
            <value>
                <fullName>4 - Advanced</fullName>
            </value>
            <value>
                <fullName>5 - Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>