force-app/main/default/objects/Skill__c/fields/Type_Of_Skills__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Skills__c</fullName>
    <label>Type Of Skills</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>Google Ads</fullName>
            </value>
            <value>
                <fullName>Recruitment</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>UI Design</fullName>
            </value>
            <value>
                <fullName>Graphic Design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>