force-app/main/default/objects/Skill__c/validationRules/Type_Of_Skill_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_Of_Skill_Required</fullName>
    <active>true</active>
    <description>Ensure Type of Skills is not blank</description>
    <errorConditionFormula>ISBLANK (TEXT(Type_Of_Skills__c))</errorConditionFormula>
    <errorMessage>Please select Type of Skills</errorMessage>
</ValidationRule>